# RG153-crazy-chicken-kart

./: .clang-format  .gitignore  CMakeLists.txt  DrawFunctions.cpp  DrawFunctions.hpp  Makefile  README.md  automatic_clang_formater.sh  crazyChickenKart  crazyChickenKart.c  crazyChickenKart.cpp
Textures/: image.cpp
irrKlang/examples/01.HelloWorld/: example  main.cpp
irrKlang/examples/02.3DSound/: example  main.cpp
irrKlang/examples/03.MemoryPlayback/: main.cpp
irrKlang/examples/04.OverrideFileAccess/: main.cpp
irrKlang/examples/05.Effects/: main.cpp
irrKlang/examples/06.Recording/: main.cpp
irrKlang/examples/crazyChickenKart/: DrawFunctions.cpp  DrawFunctions.hpp  Makefile  README.md  crazyChickenKart  crazyChickenKart.cpp  image.cpp  image.hpp
irrKlang/plugins/ikpMP3/: CIrrKlangAudioStreamLoaderMP3.cpp  CIrrKlangAudioStreamMP3.cpp  ikpMP3.cpp
